# image-resizer-template

./: MAKE87.yml  README.md  pyproject.toml
app/: main.py
tests/unit/: test_image_functions.py
